<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textViewURL"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:text="@string/text_view_URL"
        android:textSize="20sp" />
    
    <EditText
        android:id="@+id/editTextURL"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:textSize="16sp" 
        android:text="@string/text_field_URL"
        android:inputType="textUri" />
    
    <Button
        android:id="@+id/buttonURL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/ok" />
    
</LinearLayout>